2003-07-08  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_pubsub/mod_pubsub.erl: Most of functions now works

2003-07-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_pubsub/mod_pubsub.erl: Pub/sub implementation (not
	completed yet)

2003-07-05  Alexey Shchepin  <alexey@sevcom.net>

	* src/jlib.hrl: Added pub/sub nemaspaces

2003-07-03  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_irc/iconv_erl.c (iconv_erl_control): Bugfix

2003-06-30  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc_room.erl: Fixed room destroying
	* src/mod_muc/mod_muc.erl: Likewise

2003-06-29  Alexey Shchepin  <alexey@sevcom.net>

	* src/jlib.hrl: Error stanzas updated to confirm latest xmpp-core

2003-06-20  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Returned stream restarting

2003-06-10  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Removed stream restarting

2003-06-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: SASL support updated to xmpp-core-13

2003-06-06  Alexey Shchepin  <alexey@sevcom.net>

	* src/cyrsasl*.erl: Support for authzid

2003-06-03  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/fr.msg: New french translation (thanks to Vincent Ricard)

2003-05-31  Alexey Shchepin  <alexey@sevcom.net>

	* src/jlib.hrl: Updated SASL namespace

2003-05-29  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_service.erl: Proper handling of bad XML

	* src/mod_muc/mod_muc_room.erl: Append number of participants in
	disco replies if requester allowed to see participant list

	* src/mod_muc/mod_muc.erl (iq_disco_items): Pass requester JID to
	room process

	* src/mod_irc/mod_irc_connection.erl: Exit on receiving of
	presence or message error

	* src/mod_irc/mod_irc_connection.erl (handle_info): Return
	"feature not implemented" on iq request with unknown namespace

2003-05-18  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc.erl: Now body of message from admin to MUC