@@ -1,3 +1,8 @@
+2003-07-09  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/mod_pubsub/mod_pubsub.erl: Added suport for meta-node
+	"pubsub/nodes"
+
 2003-07-08  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/mod_pubsub/mod_pubsub.erl: Most of functions now works
